--- a/stye.css
+++ b/stye.css
@@ -1,1 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=ZCOOL+KuaiLe&display=swap');
 
+* {
+  box-sizing: bodrer-box;
+}
+body {
+  font-family: "Popins", sans-serif;
+  margin: 0;
+}
