--- a/stye.css
+++ b/stye.css
@@ -1,5 +1,6 @@
+<style>
 @import url('https://fonts.googleapis.com/css2?family=ZCOOL+KuaiLe&display=swap');
-
+</style>
 * {
   box-sizing: bodrer-box;
 }
