--- a/styes.css
+++ b/styes.css
@@ -10,3 +10,11 @@ header {
     background:#34495e;
     color:#fff;
 }
+body {
+  background-image: url("https://images.unsplash.com/photo-1580212763260-cec90c2f3ff7?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1950&q=80");
+  background-size: cover;
+  background-position: center center;
+  min-height:100vh;
+  font-famil: "Poppins", sans-serif;
+  margin: 0;
+}
