--- a/css/styles.css
+++ b/css/styles.css
@@ -7,6 +7,10 @@
   font-style: normal;
 }
 
+.btn-primary, .btn-primary:hover, .btn-primary:active, .btn-primary:visited {
+    background-color: #8064A2 !important;
+}
+
 html {
   font-family: sans-serif;
   -ms-text-size-adjust: 100%;
