--- a/css/styles.css
+++ b/css/styles.css
@@ -15,10 +15,9 @@ html {
 }
 
 header {
-  padding: 5em 0;
-  background: #fafafa;
-  background: #fff;
-  line-height: 1.5;
+  background:#2c3e50;
+  color:#fff;
+  line-height: 1.2;
 } 
 
 .main {
@@ -42,5 +41,5 @@ body {
   padding: 5em 0;
   background: #fafafa;
   background: #fff;
-  line-height: 1.2;
+  line-height: 0.5;
 }
