--- a/css/styles.css
+++ b/css/styles.css
@@ -28,7 +28,7 @@ header {
     color:#fff;
 }
 body {
-  background-image: url("https://wallpapercave.com/wp/wp4024511.jpg");
+  background-image: src="images/backg.jpg";
   background-size: cover;
   background-position: center center;
   min-height:100vh;
