--- a/css/styles.css
+++ b/css/styles.css
@@ -28,7 +28,7 @@ header {
     color:#fff;
 }
 body {
-  background-image: url(../images/backg.jpg);
+  background-image: url(../images/backg2.jpg);
   background-size: cover;
   background-position: center center;
   min-height:100vh;
