--- a/css/styles.css
+++ b/css/styles.css
@@ -8,6 +8,26 @@
 }
 
 
+
+
+/* Page content */
+.content {
+  padding: 16px;
+}
+
+/* The sticky class is added to the header with JS when it reaches its scroll position */
+.sticky {
+  position: fixed;
+  top: 0;
+  width: 100%
+}
+
+/* Add some top padding to the page content to prevent sudden quick movement (as the header gets a new position at the top of the page (position:fixed and top:0) */
+.sticky + .content {
+  padding-top: 102px;
+}
+
+
 html {
   font-family: sans-serif;
   -ms-text-size-adjust: 100%;
@@ -15,6 +35,7 @@ html {
 }
 
 header {
+  padding: 10px 16px;
   background:#2c3e50;
   color:#fff;
 } 
