--- a/css/styles.css
+++ b/css/styles.css
@@ -8,13 +8,10 @@
 }
 
 
-.drop-shadow {
-        float: right;
-      }
-      .drop-shadow img {
-        filter: drop-shadow(7px 7px 7px #666666);
-        -webkit-filter: drop-shadow(7px 7px 7px #666666);
-      }
+.box-shadow {
+        float: left;
+        box-shadow: 7px 7px 7px #666666;
+}
 
 /* Page content */
 .content {
