--- a/css/styles.css
+++ b/css/styles.css
@@ -8,7 +8,7 @@
 }
 
 p, div {margin: 0px; padding: 0px; border: 10px;}
-p {padding: 100px 100px;}
+p {padding: 35px;}
 
 #c {
   text-shadow: 7px 7px 7px #FFFAFA;
