--- a/css/styles.css
+++ b/css/styles.css
@@ -7,11 +7,11 @@
   font-style: normal;
 }
 
-p, div {margin: 0px; padding: 0px; border: 10px;}
-p {padding: 35px;}
 
 #c {
   text-shadow: 7px 7px 7px #FFFAFA;
+  padding: 10px;
+  padding-top: 30px;
  }
 
 .box-shadow {
