--- a/css/styles.css
+++ b/css/styles.css
@@ -17,6 +17,7 @@
 .box-shadow {
         float: left;
         box-shadow: 7px 7px 7px #666666;
+        padding-bottom: 25px;
 }
 
 /* Page content */
