--- a/css/styles.css
+++ b/css/styles.css
@@ -16,6 +16,7 @@ row {
 
 #myHeader { margin-bottom: 100px; }
 
+
 #c {
   padding: 20px;
   
@@ -78,6 +79,7 @@ body {
   padding:  2em 0;;
   background:#2c3e50;
   color:#fff;
+  margin-top: 100px;
 
 }
 
