--- a/css/styles.css
+++ b/css/styles.css
@@ -75,7 +75,7 @@ body {
   background-size: cover;
   background-position: center center;
   min-height:100vh;
-  font-famil: "Poppins", sans-serif;
+  font-family: "Poppins", sans-serif;
   margin: 0;
 
 }
