--- a/css/styles.css
+++ b/css/styles.css
@@ -32,12 +32,13 @@ row {
   padding: 16px;
 }
 
-/* The sticky class is added to the header with JS when it reaches its scroll position */
+/* The sticky class is added to the header with JS when it reaches its scroll position 
 .sticky {
   position: fixed;
   top: 0;
   width: 100%
 }
+*/
 
 /* Add some top padding to the page content to prevent sudden quick movement (as the header gets a new position at the top of the page (position:fixed and top:0) */
 .sticky + .content {
@@ -57,6 +58,7 @@ header {
   color:#fff;
   position: fixed;
   top: 0;
+  width: 100%;
 } 
 
 .main {
