--- a/css/styles.css
+++ b/css/styles.css
@@ -37,7 +37,12 @@ row {
   text-align:center; 
 
 }
+}
+#f {
+  text-align:center; 
+  font-size: 12px;
 
+}
 .box-shadow {
 
         box-shadow: 7px 7px 7px #666666;
